--- a/FribergsCarRental/appsettings.json
+++ b/FribergsCarRental/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=CarRental1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
